--- a/index.qmd
+++ b/index.qmd
@@ -1,45 +1,108 @@
 ---
-title: "Making shareable documents with Quarto"
-subtitle: "Create open-source tutorials, onboarding docs, and much more"
+title: "Palau 2024"
+subtitle: "Data analyses"
+author: "Juan Mayorga"
+number-sections: false
+date: today
+theme: cosmo
+format: 
+  html:
+    self-contained: true
+    code-fold: true
+    toc: true
+    toc-location: right
 ---
 
-## Welcome {#welcome}
+```{r, message = F, warning = F, fig.width = 10, fig.height = 10, echo = F}
+library(paletteer)
+library(sf)
+library(bigrquery)
+library(gt)
+library(tidyverse)
 
-It's possible to create beautiful documentation to share online with [Quarto](https://quarto.org) that auto-updates with [GitHub](http://github.com). This is very new and incredibly cool. This tutorial is an example of a quarto website --- it is a really powerful way to create and share your work. You can communicate about science using the same reproducible workflow you and/or your colleagues use for analyses, whether or not you write code.
+knitr::opts_chunk$set(eval = F, warning = F, message = F, include = F, echo = F)
 
-Creating websites with Quarto can be done without knowing R, Python or HTML, CSS, etc, and that's where we'll start. However, Quarto integrates with these tools so you can make your websites as complex and beautiful as you like as you see examples and reuse and remix from others in the open community. This tutorial borrows heavily from a lot of great tutorials and resources you should check out too -- there are links throughout.
+PristineSeasR::set_ps_paths(email = "marine.data.science@ngs.org")
 
-## What is Quarto?
+exp_id <- "PLW_2024"
 
-Quarto helps you have your ideas and your code in one place, and present it in a beautiful way. 
+exp_path <- file.path(ps_science_path, "expeditions", "PLW-2024")
 
-**Quarto unifies and extends the RMarkdown ecosystem** - it unifies by combining the functionality of R Markdown, bookdown, distill, xaringian, etc into a single consistent system. And it extends in several ways: all features are possible beyond R too, including Python and Javascript. It also has more “guardrails”: accessibility and inclusion are centered in the design. Quarto is for people who love RMarkdown, and it's for people who have never used RMarkdown. 
- 
+ps_data_path <- file.path(ps_science_path, "datasets/")
 
-The ability for Quarto to streamline collaboration has been so cool and important for our [NASA Openscapes](https://nasa-openscapes.github.io/) project. Quarto has been a common place for us to collaborate - across R and Python languages and coding expertise. 
+bigrquery::bq_auth(email = "marine.data.science@ngs.org")
 
-## What is this tutorial?
+bq_connection <- DBI::dbConnect(bigrquery::bigquery(), project = "pristine-seas")
+```
 
-This is a 1-hour tutorial that can be used to teach or as self-paced learning. 
+# Vessel track
 
-We introduce Quarto by exploring this tutorial website, and practicing the basic Quarto workflow using different tools (GitHub browser, RStudio, and Jupyter) for editing your website.
+```{r track, eval = TRUE}
+#Argo mmsi: 312208000
+#Argo callsign: V3OW5
 
-We'll start off from the browser so you don't need to install any additional software, however this approach is very limited and you will soon outgrow its capabilities. If you don't already have a workflow to edit files and sync to GitHub from your computer, I recommend RStudio. You don't need to know R to use RStudio, and it has powerful editor features that make for happy workflows.
+argo_track <- sf::st_read(file.path(exp_path,
+                                    "data/primary/raw/argo-route/data.geojson")) 
 
-[Quarto.org](https://quarto.org) is the go-to place for full documentation and more tutorials! 
+argo_nm <- round((st_length(argo_track)/10^3)*0.539957) # NM
+```
 
-## Example Quarto sites
+The Argo traveled a total of `r round(as.numeric(sum(argo_nm)*1.852))` km^2^ during this expedition. 
 
-A few Quarto websites from Openscapes - so far we have been using Quarto for documentation using Quarto and Markdown files and Jupyter Notebooks.
+```{r track_map, eval = TRUE, include = T}
+mapview::mapview(argo_track, 
+                 map.types = c("Esri.WorldImagery"))
+```
 
--   [Champions Lessons Series](https://openscapes.github.io/series)
--   [Openscapes Approach Guide](https://openscapes.github.io/approach-guide/)\
--   [2021 NASA Cloud Hackathon](https://nasa-openscapes.github.io/2021-Cloud-Hackathon/)
--   [Faylab Lab Manual](https://thefaylab.github.io/lab-manual/)
--   [A Quarto tip a day](https://mine-cetinkaya-rundel.github.io/quarto-tip-a-day/), by Mine Çetinkaya-Rundel
+# Summary of work
 
-## About
+```{r exp_meta_tbl, eval = T, include = T}
+expedition_meta <- tbl(bq_connection, "metadata.PLW_2024") |> 
+  filter(location != "Transit") |> 
+  collect()
 
-[Openscapes](https://openscapes.org) is about better science for future us. We help researchers reimagine data analysis, develop modern skills that are of immediate value to them, and cultivate collaborative and inclusive research teams as part of the broader global open movement.
+#| column: page
+expedition_meta |> 
+  group_by(location, method) |> 
+  summarize(n_sites = n_distinct(station_id)) |> 
+  pivot_wider(names_from = location, 
+              values_from = n_sites, 
+              values_fill = 0) |> 
+  gt::gt(rowname_col = "method") |> 
+  grand_summary_rows(columns = everything(),
+                     fns = list(list(label = md("**Grand total**"), fn = "sum")),
+                     fmt = ~ fmt_number(., decimals = 0, use_seps = FALSE)) |> 
+  tab_spanner(label = "SW Islands",
+              columns = c("Sonsorol", "Fanna", "Pulo Anna", "Merir", "Tobi", "Helen")) |> 
+  tab_spanner(label = "Offshore",
+              columns = c("Babeldaob", "SW Slope", "NW Slope", "Seamount A", "Seamount B-N", "Seamount B-C", "Seamount B-S")) |> 
+  tab_header(title = "Number of workstations per method and location") |> 
+  opt_align_table_header(align = "left") |> 
+  tab_style(locations = cells_grand_summary(),
+            style = cell_fill(color = "lightblue" |> adjust_luminance(steps = +2))) |> 
+  tab_options(ihtml.use_compact_mode = TRUE,
+              data_row.padding = px(5)) 
+```
 
-We're developing this tutorial to help folks with different levels of technical skills use [Quarto](https://quarto.org) for documentation and tutorial building. This tutorial was originally created for several different audiences: [NASA-Openscapes](https://nasa-openscapes.github.io) researcher support engineers using Python, communications directors at organizations promoting open science who do not identify as coders, and fisheries scientists curious about transitioning from RMarkdown. We're hoping it's useful to folks with backgrounds as wide as these; if you find it useful or have suggestions for improvement, please let us know by clicking "Edit this page" or "Report an issue" at the upper right side of any page.
+```{r rov_map, eval = TRUE, include = T}
+tmp <- expedition_meta |> 
+  filter(!is.na(lon)) |> 
+  collect() |> 
+  st_as_sf(coords = c("lon", "lat"), crs = 4326) |> 
+  group_by(method, ps_site_id, location, geometry) |> 
+  summarize(strata = paste0(depth_m, "m",collapse = ", "))
+
+mapview::mapview(tmp |> 
+                   st_jitter(factor = 0.000005),
+                 zcol = c(method = "method"), 
+                 legend = TRUE,
+                 alpha = 0.5,
+                 col.regions = paletteer_d("MoMAColors::Klein", 11),
+                 map.types = c("Esri.WorldImagery"),
+                 layer.name = "method",
+                 popup = leafpop::popupTable(tmp,
+                                      zcol = c("method",
+                                               "ps_site_id",
+                                               "location",
+                                               "strata")))
+```
